--- a/assets/app/styles/_tile.less
+++ b/assets/app/styles/_tile.less
@@ -114,7 +114,7 @@
 .tile-flex {
   .box-shadow-hover-transition;
   div:nth-child(3n) {
-    .fa {
+    .fa, .pficon {
       cursor: help;
       font-size: @font-size-base;
       opacity: .38;
